--- a/MyProject_0624/Properties/Resources.resx
+++ b/MyProject_0624/Properties/Resources.resx
@@ -121,4 +121,10 @@
   <data name="CloestCrvsInRange" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Icons\CloestCrvsInRange.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="CloestCrvsInRange_new" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Icons\CloestCrvsInRange_new.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="ZoomIterator_Obj" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Icons\ZoomIterator_Obj.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
