--- a/MyProject_0624/Properties/Resources.resx
+++ b/MyProject_0624/Properties/Resources.resx
@@ -118,11 +118,20 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
+  <data name="AddAttribute_Crv" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Icons\AddAttribute_Crv.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="CloestCrvsInRange" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Icons\CloestCrvsInRange.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="CloestCrvsInRange_new" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Icons\CloestCrvsInRange_new.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="DestructAttribute_Crv" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Icons\DestructAttribute_Crv.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="HS_ToolBox" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Icons\HS_ToolBox.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="ZoomIterator_Obj" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Icons\ZoomIterator_Obj.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
