--- a/MyProject_0624/Properties/Resources.resx
+++ b/MyProject_0624/Properties/Resources.resx
@@ -130,6 +130,9 @@
   <data name="DestructAttribute_Crv" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Icons\DestructAttribute_Crv.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="DirectionUnifier_Crv" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Icons\DirectionUnifier_Crv.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="HS_ToolBox" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Icons\HS_ToolBox.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
