--- a/MyProject_0624/Properties/Resources.resx
+++ b/MyProject_0624/Properties/Resources.resx
@@ -139,10 +139,13 @@
   <data name="HS_ToolBox" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Icons\HS_ToolBox.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="isLinear" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Icons\isLinear.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="ZoomIterator_Obj" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Icons\ZoomIterator_Obj.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="isLinear" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Icons\isLinear.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="Batch_Render" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Icons\Batch_Render.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
