--- a/MyProject_0624/Properties/Resources.resx
+++ b/MyProject_0624/Properties/Resources.resx
@@ -148,4 +148,13 @@
   <data name="Batch_Render" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Icons\Batch_Render.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="AddAttribute_Pt" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Icons\AddAttribute_Pt.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="DestructAttribute_Pt" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Icons\DestructAttribute_Pt.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="setIntersectionDiff" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Icons\setIntersectionDiff.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
