--- a/MyProject_0624/Properties/Resources.resx
+++ b/MyProject_0624/Properties/Resources.resx
@@ -133,9 +133,6 @@
   <data name="DirectionUnifier_Crv" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Icons\DirectionUnifier_Crv.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="GetCenterLine_Pipe" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Icons\GetCenterLine_Pipe.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
   <data name="HS_ToolBox" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Icons\HS_ToolBox.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
@@ -156,5 +153,11 @@
   </data>
   <data name="setIntersectionDiff" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Icons\setIntersectionDiff.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="StringMatchIndex" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Icons\StringMatchIndex.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="GetCenterLine_Pipe" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Icons\GetCenterLine_Pipe.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
