--- a/MyProject_0624/Properties/Resources.resx
+++ b/MyProject_0624/Properties/Resources.resx
@@ -160,4 +160,10 @@
   <data name="GetCenterLine_Pipe" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Icons\GetCenterLine_Pipe.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="SetCurrentCamera_Viewport" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Icons\SetCurrentCamera_Viewport.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="GetInfo_Viewport" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Icons\GetInfo_Viewport.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
